Update Terraform Website documentation for the new Organization and Workspace Manage Run Task permissions

--- a/content/cloud-docs/api-docs/workspaces.mdx
+++ b/content/cloud-docs/api-docs/workspaces.mdx
@@ -211,6 +211,7 @@ _Without a VCS repository_
         "can-destroy": true,
         "can-force-unlock": true,
         "can-lock": true,
+        "can-manage-run-tasks": true,
         "can-manage-tags": true,
         "can-queue-apply": true,
         "can-queue-destroy": true,
@@ -314,6 +315,7 @@ _With a VCS repository_
         "can-destroy": true,
         "can-force-unlock": true,
         "can-lock": true,
+        "can-manage-run-tasks": true,
         "can-manage-tags": true,
         "can-queue-apply": true,
         "can-queue-destroy": true,
@@ -509,6 +511,7 @@ $ curl \
         "can-destroy": true,
         "can-force-unlock": true,
         "can-lock": true,
+        "can-manage-run-tasks": true,
         "can-manage-tags": true,
         "can-queue-apply": true,
         "can-queue-destroy": true,
@@ -656,6 +659,7 @@ $ curl \
         "can-destroy": true,
         "can-force-unlock": true,
         "can-lock": true,
+        "can-manage-run-tasks": true,
         "can-manage-tags": true,
         "can-queue-apply": true,
         "can-queue-destroy": true,
@@ -768,6 +772,7 @@ $ curl \
           "can-destroy": true,
           "can-force-unlock": true,
           "can-lock": true,
+          "can-manage-run-tasks": true,
           "can-manage-tags": true,
           "can-queue-apply": true,
           "can-queue-destroy": true,
@@ -913,6 +918,7 @@ $ curl \
         "can-destroy": true,
         "can-force-unlock": true,
         "can-lock": true,
+        "can-manage-run-tasks": true,
         "can-manage-tags": true,
         "can-queue-apply": true,
         "can-queue-destroy": true,
@@ -1116,6 +1122,7 @@ $ curl \
         "can-destroy": true,
         "can-force-unlock": true,
         "can-lock": true,
+        "can-manage-run-tasks": true,
         "can-manage-tags": true,
         "can-queue-apply": true,
         "can-queue-destroy": true,
@@ -1284,6 +1291,7 @@ $ curl \
         "can-destroy": true,
         "can-force-unlock": true,
         "can-lock": true,
+        "can-manage-run-tasks": true,
         "can-manage-tags": true,
         "can-queue-apply": true,
         "can-queue-destroy": true,
@@ -1443,6 +1451,7 @@ $ curl \
         "can-destroy": true,
         "can-force-unlock": true,
         "can-lock": true,
+        "can-manage-run-tasks": true,
         "can-manage-tags": true,
         "can-queue-apply": true,
         "can-queue-destroy": true,
@@ -1621,6 +1630,7 @@ $ curl \
         "can-destroy": true,
         "can-force-unlock": true,
         "can-lock": true,
+        "can-manage-run-tasks": true,
         "can-manage-tags": true,
         "can-queue-apply": true,
         "can-queue-destroy": true,
@@ -1808,6 +1818,7 @@ $ curl \
         "can-destroy": true,
         "can-force-unlock": true,
         "can-lock": true,
+        "can-manage-run-tasks": true,
         "can-manage-tags": true,
         "can-queue-apply": true,
         "can-queue-destroy": true,
@@ -1976,6 +1987,7 @@ $ curl \
           "can-destroy": true,
           "can-force-unlock": true,
           "can-lock": true,
+          "can-manage-run-tasks": true,
           "can-manage-tags": true,
           "can-queue-apply": true,
           "can-queue-destroy": true,
