--- a/content/cloud-docs/users-teams-organizations/api-tokens.mdx
+++ b/content/cloud-docs/users-teams-organizations/api-tokens.mdx
@@ -74,6 +74,7 @@ The following chart illustrates the various access levels for the supported API 
 | Remote operations                  |      🔶     |      🔶     |                     |
 | Manage run triggers                |      🔶     |      🔶     |          🔷         |
 | Manage notification configurations |      🔶     |      🔶     |                     |
+| Manage run tasks                   |      🔶     |      🔶     |          🔷          |
 | **Teams**                          |             |             |                     |
 | Create teams                       |      🔶     | 🔷 (owners) |          🔷         |
 | Modify team                        |      🔶     | 🔷 (owners) |          🔷         |
@@ -92,5 +93,6 @@ The following chart illustrates the various access levels for the supported API 
 | **Integrations**                   |             |             |                     |
 | Manage VCS connections             |      🔶     |      🔶     |          🔷         |
 | Manage SSH keys                    |      🔶     |      🔶     |                     |
+| Manage run tasks                   |      🔶     |      🔶     |          🔷          |
 | **Modules**                        |             |             |                     |
 | Manage Terraform modules           |      🔶     | 🔷 (owners) |                     |
