--- a/content/cloud-docs/api-docs/organizations.mdx
+++ b/content/cloud-docs/api-docs/organizations.mdx
@@ -114,7 +114,8 @@ curl \
           "can-manage-public-providers": true,
           "can-create-provider": true,
           "can-manage-public-modules": true,
-          "can-manage-custom-providers": false
+          "can-manage-custom-providers": false,
+          "can-manage-run-tasks": false
         },
         "fair-run-queuing-enabled": true,
         "saml-enabled": false,
@@ -192,7 +193,8 @@ curl \
           "can-manage-public-providers": true,
           "can-create-provider": true,
           "can-manage-public-modules": true,
-          "can-manage-custom-providers": false
+          "can-manage-custom-providers": false,
+          "can-manage-run-tasks": false
         },
         "fair-run-queuing-enabled": true,
         "saml-enabled": false,
@@ -314,6 +316,7 @@ curl \
         "can-manage-tags": true,
         "can-manage-public-modules": true,
         "can-manage-public-providers": false,
+        "can-manage-run-tasks": false,
         "can-create-provider": false
       },
       "fair-run-queuing-enabled": true,
@@ -448,6 +451,7 @@ curl \
         "can-manage-tags": true,
         "can-manage-public-modules": true,
         "can-manage-public-providers": false,
+        "can-manage-run-tasks": false,
         "can-create-provider": false
       },
       "fair-run-queuing-enabled": true,
@@ -608,6 +612,7 @@ curl \
         "can-manage-tags": true,
         "can-manage-public-modules": true,
         "can-manage-public-providers": false,
+        "can-manage-run-tasks": false,
         "can-create-provider": false
       },
       "fair-run-queuing-enabled": true,
