--- a/content/cloud-docs/workspaces/variables/managing-variables.mdx
+++ b/content/cloud-docs/workspaces/variables/managing-variables.mdx
@@ -86,6 +86,8 @@ You can only do this with files ending in `auto.tfvars`; Terraform Cloud does no
 
 > **Hands On:** Try the [Manage Variable Sets in Terraform Cloud tutorial](https://learn.hashicorp.com/tutorials/terraform/cloud-multiple-variable-sets) on HashiCorp Learn.
 
+Variable sets are only visible to members with the correct team allocation. This is members who are part of the [Owners Team](/cloud-docs/users-teams-organizations/permissions#organization-owners) or members of a team with [Manage Workspaces](/cloud-docs/users-teams-organizations/permissions#manage-workspaces) permissions assigned.
+
 To view variable sets for your organization, click **Settings** in the top menu bar, then click **Variable sets** in the left sidebar.
 
 The **Variable sets** page appears, listing all of the organization's variable sets. Click on a variable set to open it and review details about its variables and scoping.
