--- a/content/cloud-docs/api-docs/private-registry/provider-versions-platforms.mdx
+++ b/content/cloud-docs/api-docs/private-registry/provider-versions-platforms.mdx
@@ -47,6 +47,8 @@ All members of an organization can view and use both public and private provider
 
 `POST /organizations/:organization_name/registry-providers/:registry_name/:namespace/:name/versions`
 
+The private registry does not automatically update private providers when you release new versions. You must use this endpoint to add each new version. Consumers cannot use new versions until you upload all [required release files](/cloud-docs/registry/publish-providers#release-files) and [Create a Provider Platform](#create-a-provider-platform).
+
 ### Parameters
 
 | Parameter            | Description                                                                                                                                                                                                |
@@ -396,6 +398,12 @@ curl \
 ## Create a Provider Platform
 
 `POST /organizations/:organization_name/registry-providers/:registry_name/:namespace/:name/versions/:version/platforms`
+
+Platforms are binaries that allow the provider to run on a particular operating system and architecture combination (e.g., Linux and AMD64). GoReleaser creates binaries automatically when you [create a release on GitHub](/registry/providers/publishing#creating-a-github-release) or [create a release locally](/registry/providers/publishing#using-goreleaser-locally).
+
+You must upload one or more platforms for each version of a private provider. After you create a platform, you must upload the platform binary file to the `provider-binary-upload` URL.
+
+
 
 ### Parameters
 
