--- a/content/cloud-docs/api-docs/private-registry/providers.mdx
+++ b/content/cloud-docs/api-docs/private-registry/providers.mdx
@@ -169,6 +169,12 @@ curl \
 
 `POST /organizations/:organization_name/registry-providers`
 
+Use this endpoint to create both public and private providers:
+
+- **Public providers:** The public provider record will be available in the organization's registry provider list immediately after creation. You cannot create versions for public providers; you must use the versions available on the Terraform Registry.
+- **Private providers:** The private provider record will be available in the organization's registry provider list immediately after creation, but you must [create a version and upload release assets](/cloud-docs/registry/publish-providers#publishing-a-provider-and-creating-a-version) before consumers can use it. The private registry does not automatically update private providers when you release new versions. You must add each new version with the [Create a Provider Version](/cloud-docs/api-docs/private-registry/provider-versions-platforms#create-a-provider-version) endpoint.
+
+
 ### Parameters
 
 | Parameter            | Description                                                                                                                                                                                                |
@@ -177,15 +183,6 @@ curl \
 
 [permissions-citation]: #intentionally-unused---keep-for-maintainers
 
-#### Private Providers
-
-The private provider record will be available in the organization's registry provider list immediately after creation, but you must create a version and upload all necessary release assets before consumers can use the provider in configurations. Release assets include the `SHA256SUMS` file, the `SHA256SUMS.sig` file, and the GPG signing key. Refer to the [Publishing a Private Provider](/cloud-docs/registry/publish-providers) documentation for more details.
-
-The private registry does not automatically update private providers when you release new versions. You must explicitly create and upload each new version with the [Create a Provider Version](/cloud-docs/api-docs/private-registry/provider-versions-platforms#create-a-provider-version) endpoint.
-
-#### Public Providers
-
-When created, the public provider record will be available in the organization's registry provider list. You cannot create versions for public providers; you must use the versions available on the Terraform Registry.
 
 | Status  | Response                                             | Reason                                                         |
 | ------- | ---------------------------------------------------- | -------------------------------------------------------------- |
@@ -195,6 +192,8 @@ When created, the public provider record will be available in the organization's
 | [404][] | [JSON API error object][]                            | User not authorized                                            |
 
 ### Request Body
+
+~> **Important:** For private providers, you must also create a version, a platform, and upload release assets before consumers can use the provider. Refer to [Publishing a Private Provider](/cloud-docs/registry/publish-providers) for more details.
 
 This POST endpoint requires a JSON object with the following properties as a request payload.
 
