Resolve minor pull request feedback

--- a/content/enterprise/admin/infrastructure/automated-recovery.mdx
+++ b/content/enterprise/admin/infrastructure/automated-recovery.mdx
@@ -33,11 +33,11 @@ Automated snapshots are more effective when using _Mounted Disk_ or
 _External Services_ as the amount of backed up data is smaller and
 less risky.
 
-Snapshots are configured in the dashboard under `Console Settings`, in the
+You can configure snapshots in the dashboard under `Console Settings`, in the
 `Snapshot & Restore` section. We suggest you select `Enable Automatic Scheduled
-Snapshots`. For the interval, it depends on the mode of operation you're using.
-For _Mounted Disk_ or _External Services_, Daily is recommended as the
-snapshots contain only configuration data, not application data.
+Snapshots`. The interval depends on the operational mode. We recommend Daily
+for _Mounted Disk_ or _External Services_ because the snapshots contain only
+configuration data, not application data.
 
 ## Restore a snapshot in a new Terraform Enterprise instance
 
