--- a/content/enterprise/before-installing/reference-architecture/vmware.mdx
+++ b/content/enterprise/before-installing/reference-architecture/vmware.mdx
@@ -36,7 +36,7 @@ architecture.
 Depending on the chosen [operational
 mode](/enterprise/before-installing/#operational-mode-decision), the
 infrastructure requirements for Terraform Enterprise range from a single
-virtual machine for mounted disk,  to multiple virtual machines hosting the
+virtual machine for _Mounted Disk_ to multiple virtual machines hosting the
 Terraform Cloud application, PostgreSQL, Redis, and external Vault servers for
 a stateless production installation.
 
