--- a/content/enterprise/admin/infrastructure/demo-to-disk-migration.mdx
+++ b/content/enterprise/admin/infrastructure/demo-to-disk-migration.mdx
@@ -1,5 +1,8 @@
 ---
 page_title: Demo to Mounted Disk Migration - Infrastructure Administration - Terraform Enterprise
+description: >-
+  Learn how to migrate Terraform Enterprise from _Demo_ mode to _Mounted Disk_
+  mode.
 ---
 
 # Migrating from Demo Mode to Mounted Disk Mode
@@ -12,62 +15,7 @@ If you are currently running Demo mode and wish to upgrade to Terraform
 Enterprise v202204-1, you must migrate your application data from the _Demo_
 mode Docker volumes to the _Mounted Disk_ directory.
 
-## Migrating Application Data From Demo Mode to Mounted Disk Mode
-
-1. Connect to your Terraform Enterprise instance.
-
-1. Create the Mounted Disk directory. You can choose any directory, but
-Terraform Enterprise expects that the directory is backed by persistent storage
-that can be mounted to the instance. 
-
-  ```bash
-  mkdir -p /opt/terraform-enterprise
-  ```
-
-1. Set the `disk_path` application setting to the mounted disk directory.
-
-  ```bash
-  replicatedctl app-config set disk_path --value '/opt/terraform-enterprise'
-  ```
-
-1. Migrate the PostgreSQL data to the mounted disk directory.
-
-  ```bash
-  # Create the `postgres` directory under the mounted disk directory.
-  mkdir -p /opt/terraform-enterprise/postgres
-
-  # Retrieve the PostgreSQL data path from the Docker volume.
-  demo_database="$(docker volume inspect postgres --format '{{ .Mountpoint }}')"
-
-  # Migrate the PostgreSQL data to the mounted disk directory.
-  cp -r "${demo_database}"/* /opt/terraform-enterprise/postgres
-
-  # Mark the PostgreSQL data as migrated.
-  touch /opt/terraform-enterprise/postgres/.poc-to-disk-migrated
-  ```
-
-1. Migrate the object storage data to the mounted disk directory.
-
-  ```bash
-  # Create the `aux` directory under the mounted disk directory.
-  mkdir -p /opt/terraform-enterprise/aux
-
-  # Retrieve the object storage data path from the Docker volume.
-  demo_object_storage="$(docker volume inspect aux --format '{{ .Mountpoint }}')"
-
-  # Migrate the object storage data to the mounted disk directory.
-  cp -r "${demo_object_storage}"/* /opt/terraform-enterprise/aux
-
-  # Mark the object storage data as migrated.
-  touch /opt/terraform-enterprise/aux/.poc-to-disk-migrated
-  ```
-
-1. Restart Terraform Enterprise to apply the changes and start the application
-in _Mounted Disk_ mode.
-
-## Frequently Asked Questions (FAQs)
-
-### How do I check if I'm running demo mode?
+## How do I check if I'm running demo mode?
 
 Connect to your Terraform Enterprise instance and run the following command.
 
@@ -78,7 +26,7 @@ replicatedctl app-config export --template '{{ .installation_type.Value }}'
 If you see the value `poc` that means you are running demo mode and you'll need
 to migrate your application data to the mounted disk directory.
 
-### What happens if I upgrade to Terraform Enterprise v202204-1 without migrating my application data?
+## What happens if I upgrade to Terraform Enterprise v202204-1 without migrating my application data?
 
 Terraform Enterprise will fail to start with the following error until you
 migrate your application data.
@@ -109,3 +57,75 @@ following.
 The Replicated console shows the following page.
 
 ![A screenshot showing the error message on the Replicated console.](/img/docs/demo-to-disk.png)
+
+## Migrating Application Data From Demo Mode to Mounted Disk Mode
+
+1. Connect to your Terraform Enterprise instance.
+
+1. Create the Mounted Disk directory. You can choose any directory, but
+Terraform Enterprise expects that the directory is backed by persistent storage
+that can be mounted to the instance.
+
+  ```bash
+  mkdir -p /opt/terraform-enterprise
+  ```
+
+1. Set the `disk_path` application setting to the mounted disk directory.
+
+  ```bash
+  replicatedctl app-config set disk_path --value '/opt/terraform-enterprise'
+  ```
+
+1. Migrate the PostgreSQL data to the mounted disk directory.
+
+    1. Create the `postgres` directory under the mounted disk directory.
+
+        ```bash
+        mkdir -p /opt/terraform-enterprise/postgres
+        ```
+
+    1. Retrieve the PostgreSQL data path from the Docker volume.
+
+        ```bash
+        demo_database="$(docker volume inspect postgres --format '{{ .Mountpoint }}')"
+        ```
+
+    1. Migrate the PostgreSQL data to the mounted disk directory.
+
+        ```bash
+        cp -r "${demo_database}"/* /opt/terraform-enterprise/postgres
+        ```
+
+    1. Mark the PostgreSQL data as migrated.
+        ```bash
+        touch /opt/terraform-enterprise/postgres/.poc-to-disk-migrated
+        ```
+
+1. Migrate the object storage data to the mounted disk directory.
+
+    1. Create the `aux` directory under the mounted disk directory.
+
+        ```bash
+        mkdir -p /opt/terraform-enterprise/aux
+        ```
+
+    1. Retrieve the object storage data path from the Docker volume.
+
+        ```bash
+        demo_object_storage="$(docker volume inspect aux --format '{{ .Mountpoint }}')"
+        ```
+
+    1. Migrate the object storage data to the mounted disk directory.
+
+        ```bash
+        cp -r "${demo_object_storage}"/* /opt/terraform-enterprise/aux
+        ```
+
+    1. Mark the object storage data as migrated.
+
+        ```bash
+        touch /opt/terraform-enterprise/aux/.poc-to-disk-migrated
+        ```
+
+1. Restart Terraform Enterprise to apply the changes and start the application
+in _Mounted Disk_ mode.
