Remove unnecessary overview page and add redirect

--- a/content/cloud-docs/users-teams-organizations/organizations.mdx
+++ b/content/cloud-docs/users-teams-organizations/organizations.mdx
@@ -13,7 +13,7 @@ description: >-
 
 # Organizations
 
-Organizations are a shared space for [teams][] to collaborate on workspaces in Terraform Cloud.
+Organizations are a shared space for [teams][] to collaborate on workspaces. An organization can have many [teams](/cloud-docs/users-teams-organizations/teams).
 
 -> **API:** See the [Organizations API](/cloud-docs/api-docs/organizations). <br/>
 **Terraform:** See the `tfe` provider's [`tfe_organization`](https://registry.terraform.io/providers/hashicorp/tfe/latest/docs/resources/organization) resource.
