--- a/content/cloud-docs/users-teams-organizations/users.mdx
+++ b/content/cloud-docs/users-teams-organizations/users.mdx
@@ -12,7 +12,7 @@ description: >-
 
 # Users
 
-User accounts belong to individual people. A user can be a member of multiple [organizations][].
+User accounts belong to individual people. They belong to teams, which are granted permissions on an organization’s workspaces. A user can be a member of multiple [organizations][].
 
 -> **API:** See the [Account API](/cloud-docs/api-docs/account).
 
