Updates to Users page

--- a/content/cloud-docs/users-teams-organizations/organizations.mdx
+++ b/content/cloud-docs/users-teams-organizations/organizations.mdx
@@ -13,10 +13,10 @@ description: >-
 
 # Organizations
 
-Organizations are a shared space for [teams][] to collaborate on workspaces. An organization can have many [teams](/cloud-docs/users-teams-organizations/teams).
+Organizations are a shared space for one or more [teams][] to collaborate on workspaces.
 
--> **API:** See the [Organizations API](/cloud-docs/api-docs/organizations). <br/>
-**Terraform:** See the `tfe` provider's [`tfe_organization`](https://registry.terraform.io/providers/hashicorp/tfe/latest/docs/resources/organization) resource.
+-> **API:** Refer to the [Organizations API](/cloud-docs/api-docs/organizations). <br/>
+**Terraform:** Refer to the `tfe` provider's [`tfe_organization`](https://registry.terraform.io/providers/hashicorp/tfe/latest/docs/resources/organization) resource.
 
 ## Selecting Organizations
 
