Implement pull request feedback

--- a/content/enterprise/before-installing/data-storage-requirements/postgres-requirements.mdx
+++ b/content/enterprise/before-installing/data-storage-requirements/postgres-requirements.mdx
@@ -57,8 +57,8 @@ installations and `disable` for _Mounted Disk_ installations.
 
 ## PostgreSQL 9.5 to 12 Upgrade
 
-In Terraform Enterprise v202103-1, the internally-managed PostgreSQL server has
-been upgraded from PostgreSQL 9.5 to PostgreSQL 12. This change only affects
+In Terraform Enterprise v202103-1, the internally-managed PostgreSQL server was
+been upgraded from PostgreSQL 9.5 to PostgreSQL 12. This change only affected
 _Mounted Disk_ installations.
 
 For more details, consult the v202103-1 [release notes](https://github.com/hashicorp/terraform-enterprise-release-notes/blob/master/v202103-1.md).
