--- a/content/enterprise/before-installing/reference-architecture/vmware.mdx
+++ b/content/enterprise/before-installing/reference-architecture/vmware.mdx
@@ -33,12 +33,12 @@ architecture.
 
 ## Infrastructure Requirements
 
-Depending on the chosen [operational
-mode](/enterprise/before-installing/#operational-mode-decision), the
-infrastructure requirements for Terraform Enterprise range from a single
-virtual machine for _Mounted Disk_ to multiple virtual machines hosting the
-Terraform Cloud application, PostgreSQL, Redis, and external Vault servers for
-a stateless production installation.
+The [operational
+mode](/enterprise/before-installing/#operational-mode-decision) determines the
+infrastructure requirements for your instance. For example, an installation in
+Mounted Disk mode may require a single virtual machine, whereas a stateless
+production installation may require multiple virtual machines to host the
+Terraform Cloud application, PostgreSQL, Redis, and external Vault servers.
 
 ## Standalone/Mounted Disk
 
