Adjust page description

--- a/content/cloud-docs/users-teams-organizations/users.mdx
+++ b/content/cloud-docs/users-teams-organizations/users.mdx
@@ -1,8 +1,8 @@
 ---
 page_title: Users - Terraform Cloud and Terraform Enterprise
 description: >-
-  How to create an account, change user settings, set up two-factor
-  authentication, create user API tokens, and more.
+  Create an account, edit settings, set up two-factor
+  authentication, create API tokens, and more.
 ---
 
 [organizations]: /cloud-docs/users-teams-organizations/organizations
@@ -14,7 +14,7 @@ description: >-
 
 User accounts belong to individual people. Each user can be part of one or more [teams](/cloud-docs/users-teams-organizations/teams), which are granted permissions on workspaces within an organization. A user can be a member of multiple [organizations][].
 
--> **API:** Refer to the [Account API](/cloud-docs/api-docs/account).
+-> **API:** Refer to the [Account API](/cloud-docs/api-docs/account) to get account details, update account information, and change your password.
 
 ## Creating an Account
 
